# dubdub

./: .gitignore  README.md
backend/python-ml/: main.py  requirements-minimal.txt  requirements.txt
backend/rust-service/: Cargo.toml
backend/rust-service/src/: aligner.rs  main.rs  models.rs  tokenizer.rs
extension/: README.md  manifest.json
extension/assets/: README.md
extension/background/: service-worker.js
extension/content/: api-client.js  main.js  netflix-handler.js  netflix-injector.js  netflix-subtitle-parser.js  popover.css  subtitle-detector.js  word-popover.js
extension/popup/: popup.css  popup.html  popup.js
