[package]
name = "dubdub"
version = "1.0.0"
edition = "2024"
authors = ["DuoTok Enhanced Team"]
description = "Rust backend service for DuoTok Enhanced - AI-powered language learning"



[dependencies]
actix-web = "4.4"
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
env_logger = "0.11"
log = "0.4"
dotenv = "0.15"
reqwest = { version = "0.12", features = ["json"] }
futures = "0.3"
regex = "1.10"
unicode-segmentation = "1.11"
